# routes/temple.js
@@ -1,0 +1,12 @@
+const routes = require('express').Router();
+const temples = require('../controllers/temple.js');
+const { isAuthenticated } = require("../middleware/authenticate");
+
+
+routes.get('/', temples.findAll);
+routes.get('/:temple_id', temples.findOne);
+
+routes.post('/', isAuthenticated, temples.create);
+routes.delete('/:temple_id', isAuthenticated, temples.delete);
+
+module.exports = routes;
